--- a/MAIN PAGE.html
+++ b/MAIN PAGE.html
@@ -30,7 +30,7 @@ text-align:center;
 <table style="width:100%;height:20%;background-color:white;">
 <tr>
 <th>
-<a href=aboutme.html"target="iframe-t">About Me</a>
+<a href="aboutme.html"target="iframe-t">About Me</a>
 </th>
 </tr>
 <tr>
