--- a/MAIN PAGE.html
+++ b/MAIN PAGE.html
@@ -39,7 +39,7 @@ text-decoration:none;
 <table style="width:100%;">
 <tr>
 <td style="width:50;padding:0px;margin:0px;">
-<a href="http://iiitkota.ac.in/"><img src="iiitkotalogo1.jpeg"style="float:left;"></a>
+<a href="http://iiitkota.ac.in/"><img src="iiitkotalogo1.jpeg" style="float:left;"></a>
 </td>
 <td>
 <h1 style=" font-size:80px;text-align:left;color:#0099cc; text-decoration:none;">ASSIGNMENT</h1>
@@ -49,8 +49,8 @@ text-decoration:none;
 <table style="width:100%;height:20%;background-color:white;">
 <tr>
 <th style="text-align:center;">
-<a href=aboutme.html"target="iframe-t" ><div style="text-align:center;"><i class="glyphicon glyphicon-user" style="font-size:35px;"></i></div></a>
-<a href=aboutme.html"target="iframe-t" >About me</a>
+<a href="aboutme.html"target="iframe-t" ><div style="text-align:center;"><i class="glyphicon glyphicon-user" style="font-size:35px;"></i></div></a>
+<a href="aboutme.html"target="iframe-t" >About me</a>
 </th>
 <th style="text-align:center;">
 <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d888.3106095276909!2d75.7820727291688!3d27.054094393299632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396dad6e8c793ed5%3A0xc95f75fea1c0c7ae!2splot%20no.%20213%20shyam%20nagar-6%20bherukhejra%2Clooniyawas%2Ctodi%2C%20Ramlyawala%2C%20Rajasthan%20303805!5e0!3m2!1sen!2sin!4v1582256791819!5m2!1sen!2sin" target="iframe-t"><div style="text-align:center;"><i style="font-size:35px;" class="material-icons">location_on</i></div></a>
